Bessl kind of a fix

--- a/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
+++ b/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
@@ -51,9 +51,9 @@ Die Funktion \ref{eq:FormelinchenBessel} kann übersichtlich zusammengefasst wer
 \begin{equation}\label{esq:Besselbabymonster}
 \sin(w_ct + I\sin(w_mt)) = \sum_{n=-\infty}^{\infty}J_n(I)\sin(w_ct+nw_mt)
 \end{equation}
-Das Frequenzspektrum für die einfache FM weist also sowohl oberhalb der Trägerfrequenz als auch unterhalb Seitenbänder stets im Abstand \begin{math} w_m \end{math} auf. Die jeweiligen Amplituden werden dabei durch die Ordnung der Besselfunktion bestimmt, und zwar in Abhängigkeit vom Modulationsindex, welcher als Argument an diese übergeben wird. Die Besselfunktion liefert dabei ab einem Modulationsindex größer ca. 2,5 auch negative Vorzeichen für die Amplituden der Seitenfrequenzen zurück, wie die grafischen Darstellung der Besselfunktion mit den Achsen \textit{Modulationsindex} und \textit{Nummer des Seitenbands} zeigt (siehe hierzu \ref{fig:bessel3D}). 
+Das Frequenzspektrum für die einfache FM weist also sowohl oberhalb der Trägerfrequenz als auch unterhalb Seitenbänder stets im Abstand \begin{math} w_m \end{math} auf. Die jeweiligen Amplituden werden dabei durch die Laufvariable $n$ der Besselfunktion bestimmt, und zwar in Abhängigkeit vom Modulationsindex, welcher als Argument an diese übergeben wird. Die Besselfunktion liefert dabei ab einem Modulationsindex größer ca. 2,5 auch negative Vorzeichen für die Amplituden der Seitenfrequenzen zurück, wie die grafischen Darstellung der Besselfunktion mit den Achsen \textit{Modulationsindex} und \textit{Nummer des Seitenbands} zeigt (siehe hierzu \ref{fig:bessel3D}). 
 
-In der Darstellung \ref{eq:FormelinchenBessel} lässt sich am Vorzeichen des jeweiligen Terms zusätzlich auch ablesen, dass Besselkoeffizienten ungerader Ordnung zu negativen Amplitudenwerten des jeweiligen unteren Seitenbandes führen. Untere Seitenbänder können nun bei Trägerfrequenzen nahe 0 Hz oder einem ausreichend großen Modulationsindex natürlich auch im negativen Hz-Bereich landen. Da negative Frequenzen, also Seitenbänder links der 0 Hz, einer Phasenverschiebung um 180 Grad entsprechen, erhält man das endgültige, akustisch wahrgenommene Frequenzspektrum durch die Spiegelung dieser negativen Frequenzen je einmal an Abszisse und Ordinate. Dies enspricht einer Phasenverschiebung (Spiegelung Abszisse), und zwar nun im positiven Bereich (Spiegelung Ordinate). Dabei kann es natürlich zur Auslöschung von Bändern durch die Addition ursprünglich negativer Amplituden der unteren Seitenbänder mit negativen Frequenzen auf bereits vorhandene positive Amplituden der oberen Seitenbänder im positiven Bereich kommen. Umgekehrt kann natürlich auch eine Verstärkung die Folge sein, wenn negative Seitenfrequenzbänder links der 0 Hz mit positiver Amplitude auf positive Bänder mit positiver Amplitude fallen.
+In der Darstellung \ref{eq:FormelinchenBessel} lässt sich am Vorzeichen des jeweiligen Terms zusätzlich auch ablesen, dass Besselkoeffizienten mit ungerader Laufvariablen $n$ zu negativen Amplitudenwerten des jeweiligen unteren Seitenbandes führen. Untere Seitenbänder können nun bei Trägerfrequenzen nahe 0 Hz oder einem ausreichend großen Modulationsindex natürlich auch im negativen Hz-Bereich landen. Da negative Frequenzen, also Seitenbänder links der 0 Hz, einer Phasenverschiebung um 180 Grad entsprechen, erhält man das endgültige, akustisch wahrgenommene Frequenzspektrum durch die Spiegelung dieser negativen Frequenzen je einmal an Abszisse und Ordinate. Dies enspricht einer Phasenverschiebung (Spiegelung Abszisse), und zwar nun im positiven Bereich (Spiegelung Ordinate). Dabei kann es natürlich zur Auslöschung von Bändern durch die Addition ursprünglich negativer Amplituden der unteren Seitenbänder mit negativen Frequenzen auf bereits vorhandene positive Amplituden der oberen Seitenbänder im positiven Bereich kommen. Umgekehrt kann natürlich auch eine Verstärkung die Folge sein, wenn negative Seitenfrequenzbänder links der 0 Hz mit positiver Amplitude auf positive Bänder mit positiver Amplitude fallen.
 
 Die für beide Paare $T1<M1 + T2<M2$ anhand dieser Prinzipien ermittelten Frequenzspektren können für diese Form der Parallelschaltung in einem abschließenden Schritt einfach addiert werden und liefern so das gesamte Frequenzspektrum des gemischten Ausgangssignals. 
 
@@ -176,9 +176,9 @@ Damit ergeben sich exakt $i \times k$ Kombinationen der Besselfunktionskoeffizie
 &+ ... 
 \end{split}
 \end{equation}
-Sofern zwei Zeilen eine Kombination von Besselkoeffizienten derselben Ordnung aufweisen, steht die ober Zeile für das obere Seitenfrequenzband, die Zeile darunter für das untere Seitenfrequenzband. Das gilt unter der Voraussetzung, dass die Modulationsfrequenz von M1 größer ist als jene von M2 - sonst stehen die linken Terme beider Zeilen für das obere Frequenzband und die rechten Terme für das untere. Entscheidend ist also, ob die Summe beider Modulatoren zusammen ein negatives Vorzeichen besitzen (unteres Seitenband) oder ein positives (oberes Seitenband). Die Lage eines Frequenzbands ergibt sich damit stets durch den Abstand eines Vielfachen der ersten Modulatorfrequenz vom Träger nach beiden Seiten, und um diesen Punkt herum dann jeweils um ein Vielfaches der zweiten Modulatorfrequenz nach beiden Seiten versetzt. Die Amplitude des jeweiligen Bandes liefert das Produkt der Besselkoeffizienten, welche die Modulationsindizes als Argumente bekommen. 
+Sofern zwei Zeilen eine Kombination von Besselkoeffizienten mit gleicher Laufvariable $n$ aufweisen, steht die obere Zeile für das obere Seitenfrequenzband, die Zeile darunter für das untere Seitenfrequenzband. Das gilt unter der Voraussetzung, dass die Modulationsfrequenz von M1 größer ist als jene von M2 - sonst stehen die linken Terme beider Zeilen für das obere Frequenzband und die rechten Terme für das untere. Entscheidend ist also, ob die Summe beider Modulatoren zusammen ein negatives Vorzeichen besitzen (unteres Seitenband) oder ein positives (oberes Seitenband). Die Lage eines Frequenzbands ergibt sich damit stets durch den Abstand eines Vielfachen der ersten Modulatorfrequenz vom Träger nach beiden Seiten, und um diesen Punkt herum dann jeweils um ein Vielfaches der zweiten Modulatorfrequenz nach beiden Seiten versetzt. Die Amplitude des jeweiligen Bandes liefert das Produkt der Besselkoeffizienten, welche die Modulationsindizes als Argumente bekommen. 
 
-Eine Abkürzung, um auf die Additionsterme für das Spektrum oben zu gelangen, sei hier noch kurz präsentiert: Sieht man sich z.B. die beiden Zeilen mit den Besselkoeffizienten \begin{math} J_1J_2 \end{math} an, so lässt sich einsehen, dass diese beiden Zeilen zusammen die Kombinationen der Ordnungen (1,2),(1,-2),(-1,2),(-1,-2) abdecken (sprich, die Wechselwirkung zwischen erstem und zweitem Frequenzband). Daraus folgt bereits, dass 4 Terme benötigt werden. Innerhalb jedes einzelnen Terms bekommt jeweils \begin{math} w_{m1} \end{math} als Koeffizient die erste Vektorkomponente, \begin{math} w_{m2} \end{math} die zweite Vektorkomponente. Für den Vektor (1,-2) lautet der Term somit \begin{math} J_1(I_1)J_2(I_2)\sin(w_ct + w_{m1}t - 2w_{m2}t) \end{math}. Der gesamte Term erhält als Vorzeichen noch das Produkt der Vorzeichen der Vektorkomponenten, jeweils potenziert mit dem Betrag der jeweiligen Komponente. Für das gewählte Beispiel wäre das folglich \begin{math} (1)^1*(-1)^2 = 1 \end{math}, und der Term bekommt damit ein positives Vorzeichen. Die Bedingung des Potenzierens der Vorzeichen leitet sich dabei aus folgender Eigenschaft der Besselfunktion (\cite[S.358, Satz~9.1.5]{abramowitz}) ab:
+Eine Abkürzung, um auf die Additionsterme für das Spektrum oben zu gelangen, sei hier noch kurz präsentiert: Sieht man sich z.B. die beiden Zeilen mit den Besselkoeffizienten \begin{math} J_1J_2 \end{math} an, so lässt sich einsehen, dass diese beiden Zeilen zusammen die Kombinationen der Laufvariablen (1,2),(1,-2),(-1,2),(-1,-2) abdecken (sprich, die Wechselwirkung zwischen erstem und zweitem Frequenzband). Daraus folgt bereits, dass 4 Terme benötigt werden. Innerhalb jedes einzelnen Terms bekommt jeweils \begin{math} w_{m1} \end{math} als Koeffizient die erste Vektorkomponente, \begin{math} w_{m2} \end{math} die zweite Vektorkomponente. Für den Vektor (1,-2) lautet der Term somit \begin{math} J_1(I_1)J_2(I_2)\sin(w_ct + w_{m1}t - 2w_{m2}t) \end{math}. Der gesamte Term erhält als Vorzeichen noch das Produkt der Vorzeichen der Vektorkomponenten, jeweils potenziert mit dem Betrag der jeweiligen Komponente. Für das gewählte Beispiel wäre das folglich \begin{math} (1)^1*(-1)^2 = 1 \end{math}, und der Term bekommt damit ein positives Vorzeichen. Die Bedingung des Potenzierens der Vorzeichen leitet sich dabei aus folgender Eigenschaft der Besselfunktion (\cite[S.358, Satz~9.1.5]{abramowitz}) ab:
 \begin{equation}
 J_{-n}(x) = (-1)^nJ_n(x)
 \end{equation}
@@ -190,7 +190,7 @@ Um die Zusammenhänge grafisch zu veranschaulichen, nehmen wir zunächst einen T
 \caption{Einfache FM mit $f_c = 1250$, $w_m = 450$, $I = 1$. }
 \end{figure}
 \FloatBarrier
-Man sieht im Spektrum, dass wie erwartet die Trägerfrequenz bei 1250 Hz liegt, und das erste Seitenband bei $ 1250 + 450 =$ 1700 Hz. Die Additionsterme aus Gleichung \ref{eq:wallofequations} legen nun nahe, dass bei einer Modulation eines Trägers durch zwei parallele Modulatoren jeweils oberhalb und unterhalb jedes von $M1$ erzeugten Seitenbandes in Abständen der Frequenz von $M2$ wiederum eben dessen Seitenbänder liegen sollten. Zum Vergleich betrachten wir also zuerst noch einen Träger mit einer Frequenz, die dem ersten Seitenband von eben, 1700 Hz, entspricht, und modulieren diesen durch $M2 =$ 180 Hz, da wir so eine Prognose für die Seitenbänder von $M2$ bei einer gemeinsamen Modulation des Trägers erhalten. Beide Modulationsindizes erhalten den Wert 1, da die Besselfunktionen mit steigender Ordnung für dieses Argument kontinuierlich kleiner werden. Damit werden die Frequenzbänder niedriger Ordnung stets erkennbarer sein als ihre Nachbarn höherer Ordnung, und der Vergleich der beiden gewählten Einzelmodulationen mit der Parallelmodulation gewinnt an Aussagekraft.
+Man sieht im Spektrum, dass wie erwartet die Trägerfrequenz bei 1250 Hz liegt, und das erste Seitenband bei $ 1250 + 450 =$ 1700 Hz. Die Additionsterme aus Gleichung \ref{eq:wallofequations} legen nun nahe, dass bei einer Modulation eines Trägers durch zwei parallele Modulatoren jeweils oberhalb und unterhalb jedes von $M1$ erzeugten Seitenbandes in Abständen der Frequenz von $M2$ wiederum eben dessen Seitenbänder liegen sollten. Zum Vergleich betrachten wir also zuerst noch einen Träger mit einer Frequenz, die dem ersten Seitenband von eben, 1700 Hz, entspricht, und modulieren diesen durch $M2 =$ 180 Hz, da wir so eine Prognose für die Seitenbänder von $M2$ bei einer gemeinsamen Modulation des Trägers erhalten. Beide Modulationsindizes erhalten den Wert 1, da die Besselfunktionen mit steigenden Laufvariablen $i$ und $k$ für dieses Argument kontinuierlich kleiner werden. Damit werden die Frequenzbänder niedriger Ordnung stets erkennbarer sein als ihre Nachbarn höherer Ordnung, und der Vergleich der beiden gewählten Einzelmodulationen mit der Parallelmodulation gewinnt an Aussagekraft.
 \FloatBarrier
 \begin{figure} [ht]
 \label{par1}
@@ -248,7 +248,7 @@ Da hier die beiden Klammern in der Sinusfunktion zusammen exakt einer eigenstän
 \begin{equation}
 \sum_{n=-\infty}^{\infty}\sum_{k=-\infty}^{\infty}J_n(I_1)J_k(\mathbf{n}I_2)\sin(w_{c}t+nw_{m1}t + kw_{m2}t)
 \end{equation}
-Damit entspricht die Formel für das Frequenzspektrum der Kaskadenschaltung exakt jener für die Parallelschaltung \ref{eq:ParallelKompakt}, mit einem kleinen Zusatz: Es wird bei der Kaskadenschaltung zusätzlich der Modulationsindex $ I_2 $ des äußersten Modulators $M2$ mit der Ordnung $ n $ des ersten Besselkoeffizienten multipliziert und erst anschließend als Argument an die Besselfunktion gereicht. Damit ändern sich auch bei den Additionstermen für das Spektrum im Vergleich zur Parallelschaltung \ref{eq:wallofequations} lediglich die Koeffizienten:
+Damit entspricht die Formel für das Frequenzspektrum der Kaskadenschaltung exakt jener für die Parallelschaltung \ref{eq:ParallelKompakt}, mit einem kleinen Zusatz: Es wird bei der Kaskadenschaltung zusätzlich der Modulationsindex $ I_2 $ des äußersten Modulators $M2$ mit der Laufvariablen $n$ des ersten Besselkoeffizienten multipliziert und erst anschließend als Argument an die Besselfunktion gereicht. Damit ändern sich auch bei den Additionstermen für das Spektrum im Vergleich zur Parallelschaltung \ref{eq:wallofequations} lediglich die Koeffizienten:
 \begin{equation}
 \begin{split}
 \sin&(w_ct + I_1\sin(w_{m1}t) + I_2\sin(w_{m2}t)) \\
@@ -269,7 +269,7 @@ Damit entspricht die Formel für das Frequenzspektrum der Kaskadenschaltung exak
 \end{split}
 \end{equation}
 \label{Kaskadenspecials}
-Man sieht sofort, dass damit erstens die Trägerfrequenz ausschließlich durch $ I_1 $ definiert wird, da $ I_2 $ bei der Trägerfrequenz mit $0$ multipliziert wird und die Besselfunktion der nullten Ordnung für das Argument $0$ genau den Wert $1$ zurückgibt. Zweitens muss sich für höhere Seitenbänder der Modulationsindex für $M2$, also $ I_2 $, und damit auch die Gesamtheit der Kombinationsseitenfrequenzen höherer Ordnung im Vergleich zur Parallelmodulation stärker auf das resultierende Spektrum auswirken, da $ I_2 $ dort ja mit größeren $n$ multipliziert wird. Drittens entfallen alle Kombinationsseitenfrequenzen mit dem Besselkoeffizienten der Ordnung $0$ des inneren Modulators vollständig, da die dadurch bedingte Multiplikation mit $n = 0$ im Argument für die Besselfunktionen mit Ordnung $>0$ des äußeren Modulators immer den Wert $0$ zurückliefern (siehe \ref{fig:bessel2D}). 
+Man sieht sofort, dass damit erstens die Trägerfrequenz ausschließlich durch $ I_1 $ definiert wird, da $ I_2 $ bei der Trägerfrequenz mit $0$ multipliziert wird und die Besselfunktion mit Laufvariable 0 für das Argument $0$ genau den Wert $1$ zurückgibt. Zweitens muss sich für höhere Seitenbänder der Modulationsindex für $M2$, also $ I_2 $, und damit auch die Gesamtheit der Kombinationsseitenfrequenzen höherer Ordnung im Vergleich zur Parallelmodulation stärker auf das resultierende Spektrum auswirken, da $ I_2 $ dort ja mit größeren $n$ multipliziert wird. Drittens entfallen alle Kombinationsseitenfrequenzen mit dem Besselkoeffizienten mit Laufvariable $n = 0$ des inneren Modulators vollständig, da die dadurch bedingte Multiplikation mit $n = 0$ im Argument für die Besselfunktionen mit Laufvariable $>0$ des äußeren Modulators immer den Wert $0$ zurückliefern (siehe \ref{fig:bessel2D}). 
 
 Visualisiert in MATLAB zeigt sich, dass sich erwartungsgemäß um jedes Seitenband von $T$ und $M1$ die Seitenbänder von $M1$ und $M2$ ausbreiten. Mit denselben Einstellungen wie in \ref{singlecarryparallelmod} sieht das Spektrum von $T$ moduliert durch $M1$ natürlich immer noch genauso aus:
 \FloatBarrier
@@ -303,7 +303,7 @@ Zum Vergleich hier nochmals das Gesamtspektrum der Parallelschaltung eines Träg
 \caption{Parallele FM mit $f_c = 1250$, $w_{m1} = 450$, $w_{m2} = 180$, $I_1 = 1$, $I_2 = 1$. }
 \end{figure}
 \FloatBarrier
-Die Spektren ähneln sich stark, es zeigt sich aber, dass wie erwartet die Trägerfrequenz mehr Energie erhält, da der eine Besselkoeffizient der Ordnung $0$ durch die Multiplikation des Arguments mit $0$ den Wert 1 zurückliefert, anstelle eines niedrigeren Werts wie bei der Parallelschaltung. Auch fällt auf, dass alle Nicht-Kombinationsseitenfrequenzen des äußeren Modulators entfallen (also alle Kombinationen, in welchen der Besselkoeffizient des inneren Modulators $M1$ die Ordnung $0$ besitzt). Dies liegt ebenfalls an der Multiplikation von $I_2$ mit $n$, siehe \ref{Kaskadenspecials}. 
+Die Spektren ähneln sich stark, es zeigt sich aber, dass wie erwartet die Trägerfrequenz mehr Energie erhält, da der eine Besselkoeffizient mit Laufvariable $0$ durch die Multiplikation des Arguments mit $0$ den Wert 1 zurückliefert, anstelle eines niedrigeren Werts wie bei der Parallelschaltung. Auch fällt auf, dass alle Nicht-Kombinationsseitenfrequenzen des äußeren Modulators entfallen (also alle Kombinationen, in welchen der Besselkoeffizient des inneren Modulators $M1$ die Laufvariable $0$ besitzt). Dies liegt ebenfalls an der Multiplikation von $I_2$ mit $n$, siehe \ref{Kaskadenspecials}. 
 Der Vergleich wird nochmals wiederholt mit den Einstellungen $I_1 = 2$ und $I_2 = 3$. Zuerst wieder die Kaskadenschaltung:
 \FloatBarrier
 \begin{figure} [ht]
@@ -341,7 +341,7 @@ Das Frequenzspektrum berechnet sich \cite{schottiWeb} über:
 \begin{equation}
 f_{FMfeedback}(t) = \sum_{n=1}^{\infty}\frac{2}{nI}J_n(nI)\sin(nw_{c}t)
 \end{equation}
-Man sieht sofort, dass die Einflussnahme auf die Feedbackschaltung durch den Modulationsindex (d.h. die Amplitude, mit der man dem Ausgangssignal der Schaltung erlaubt, auf sich selbst zurückzuwirken) lediglich die Steilheit des Abfallens der Amplituden von den näher am Träger liegenden Seitenbändern im Vergleich zu den weiter außenliegenden beeinflusst. Die Variable $n$ hängt dabei nur von der Ordnung der Besselfunktion ab und durchläuft in jedem Fall ganzzahlig die Werte von 1 bis $\infty$. In jedem Fall ist die Lage der Seitenfrequenzbänder also immer ein ganzzahliges Vielfaches der Trägerfrequenz. 
+Man sieht sofort, dass die Einflussnahme auf die Feedbackschaltung durch den Modulationsindex (d.h. die Amplitude, mit der man dem Ausgangssignal der Schaltung erlaubt, auf sich selbst zurückzuwirken) lediglich die Steilheit des Abfallens der Amplituden von den näher am Träger liegenden Seitenbändern im Vergleich zu den weiter außenliegenden beeinflusst. Die Variable $n$ hängt dabei nur von der Laufvariable der Besselfunktion ab und durchläuft in jedem Fall ganzzahlig die Werte von 1 bis $\infty$. In jedem Fall ist die Lage der Seitenfrequenzbänder also immer ein ganzzahliges Vielfaches der Trägerfrequenz. 
 
 Der Amplitudenabfall von Band zu Band erfolgt dabei, wenn man die Einflussnahme von $n$ auf das Argument an die Besselfunktion und somit den Wert dieser herausrechnet, im Verhältnis $\frac{1}{2}$ zu $\frac{1}{3}$ zu $\frac{1}{4}$ zu $\frac{1}{5}$ etc. Damit weist er Ähnlichkeit zum Spektrum einer Sägezahnwelle auf, bei der die Obertöne in genau in diesen Verhältnissen zum Grundton stehen. Feedback-FM bietet damit die Möglichkeit, mit nur einem Operator Töne zu erzeugen, die einen rauen Charakter ähnlich einer Sägezahnwelle aufweisen. 
 
